<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_settings_category"
        android:key="pref_settings">
        <CheckBoxPreference
            android:key="@string/pref_sync_key"
            android:title="@string/pref_sync"
            android:summary="@string/pref_sync_summary"
            android:defaultValue="true" />
        <ListPreference
            android:dependency="pref_sync"
            android:key="@string/pref_sync_time_key"
            android:title="@string/pref_sync_time"
            android:summary="%s"
            android:dialogTitle="@string/pref_sync_time"
            android:entries="@array/pref_sync_time_entries"
            android:entryValues="@array/pref_sync_time_value"
            android:defaultValue="6" />
    </PreferenceCategory>
</PreferenceScreen>